Reverted back method setAllValues()  to version 16733 to solve bug 11546
SVN-Revision: 17870